--- a/index.html
+++ b/index.html
@@ -225,15 +225,23 @@
             </div>
             <!-- social links starts -->
             <div class="social-links">
-              <a href="#" class="outer-shadow hover-in-shadow">
+              <a
+                target="_blank"
+                href="https://github.com/Amberchen8892"
+                class="outer-shadow hover-in-shadow"
+              >
                 <i class="fab fa-github"></i>
               </a>
-              <a href="#" class="outer-shadow hover-in-shadow">
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/phuong-tran-67bb63196/"
+                class="outer-shadow hover-in-shadow"
+              >
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="#" class="outer-shadow hover-in-shadow">
+              <!-- <a href="#" class="outer-shadow hover-in-shadow">
                 <i class="fab fa-facebook"></i>
-              </a>
+              </a> -->
             </div>
             <!-- social links ends -->
           </div>
